corrected python counting

--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -4543,14 +4543,15 @@
     "category_position = 3\n",
     "\n",
     "# However we are only interested in region 2 (i.e., Brics)\n",
-    "region_position = 2\n",
+    "# remember in python we start counting at 0\n",
+    "region_position = 1\n",
     "\n",
     "# we know that in total we have 4 final demand category\n",
     "no_of_Y_categories = 4\n",
     "\n",
     "# so the numerical position of gross fixed capital formation in the BRICS region is\n",
     "\n",
-    "Y_cat_position = (region_position -1) * no_of_Y_categories + category_position\n",
+    "Y_cat_position = region_position * no_of_Y_categories + category_position\n",
     "Y_cat_position  "
    ]
   },
