--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -9033,7 +9033,7 @@
  "metadata": {
   "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "env_eeio",
    "language": "python",
    "name": "python3"
   },
@@ -9047,11 +9047,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
-    "hash": "6d1f42742d8eeff3650217bec81eeb13815fa78739aef7423c986dc57d3645fd"
+    "hash": "a0de1fb450ee5e26d734f0aa5b4c4b29e20575809e5e66472467df7627fd957d"
    }
   }
  },
