Added link to download exiobase

--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -12,6 +12,10 @@
     "\n",
     "In this practical, you will learn how to load and work with exiobase\n",
     "\n",
+    "You can download exiobase through this link https://exiobase.eu/index.php/data-download/exiobase3mon?limit=20&limitstart=20\n",
+    " \n",
+    "We will work with: EXIOBASE 3.4 - IOT - 2011 - pxp\n",
+    "\n",
     "The objectives of the practical are:\n",
     "- See the data available within exiobase\n",
     "- Calculate footprints using exiobase\n",
