--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -12,9 +13,9 @@
     "\n",
     "In this practical, you will learn how to load and work with exiobase\n",
     "\n",
-    "You can download exiobase through this link https://exiobase.eu/index.php/data-download/exiobase3mon?limit=20&limitstart=20\n",
+    "You can download exiobase through this link https://zenodo.org/record/5589597\n",
     " \n",
-    "We will work with: EXIOBASE 3.4 - IOT - 2011 - pxp\n",
+    "We will work with: IOT_2022_pxp.zip\n",
     "\n",
     "The objectives of the practical are:\n",
     "- See the data available within exiobase\n",
@@ -462,6 +463,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -469,9 +471,18 @@
     }
    },
    "source": [
-    "For this exercise we only focus on one component of the carbon fooprint\n",
+    "For this exercise we only focus on the carbon fooprint\n",
     "\n",
-    "*\"CO2 - combustion - air\"* in kg"
+    "*\"GHG emissions (GWP100) | Problem oriented approach: baseline (CML, 2001) | GWP100 (IPCC, 2007)\"* in kg"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "indicator = \"GHG emissions (GWP100) | Problem oriented approach: baseline (CML, 2001) | GWP100 (IPCC, 2007)\""
    ]
   },
   {
@@ -697,7 +708,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
