Exercise week 5: introduction to exiobase - fixed typo

--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -66,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -76,8 +75,8 @@
    "source": [
     "A = None # Z matrix\n",
     "Y = None  # y matrix\n",
-    "F = None  # satellite matrix\n",
-    "F_hh = None # satellite for FD matrix"
+    "F = None  # impacts matrix\n",
+    "F_hh = None # impacts for FD matrix"
    ]
   },
   {
@@ -92,7 +91,7 @@
     "You may do this by printing the labels of your imported matrices or by opening the following files in your data folder:\n",
     "- finaldemands.txt\n",
     "- products.txt\n",
-    "- satellite/unit.txt"
+    "- impacts/unit.txt"
    ]
   },
   {
@@ -463,7 +462,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -479,10 +477,14 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "outputs": [],
    "source": [
-    "indicator = \"GHG emissions (GWP100) | Problem oriented approach: baseline (CML, 2001) | GWP100 (IPCC, 2007)\""
+    "indicator = None"
    ]
   },
   {
