--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -74,7 +74,7 @@
    "outputs": [],
    "source": [
     "A = None # Z matrix\n",
-    "Y = None  # y matrix\n",
+    "Y = None  # Y matrix\n",
     "F = None  # impacts matrix\n",
     "F_hh = None # impacts for FD matrix"
    ]
@@ -710,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.9.16"
   },
   "vscode": {
    "interpreter": {
