fixed vectors capitals

--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -14,7 +14,7 @@
     "\n",
     "You can download exiobase through this link https://zenodo.org/record/5589597\n",
     " \n",
-    "We will work with: IOT_2022_pxp.zip\n",
+    "We will work with: IOT_2019_pxp.zip\n",
     "\n",
     "The objectives of the practical are:\n",
     "- See the data available within exiobase\n",
@@ -73,7 +73,7 @@
    },
    "outputs": [],
    "source": [
-    "A = None # Z matrix\n",
+    "A = None # A matrix\n",
     "Y = None  # Y matrix\n",
     "F = None  # impacts matrix\n",
     "F_hh = None # impacts for FD matrix"
@@ -511,9 +511,9 @@
    },
    "outputs": [],
    "source": [
-    "# the final demand CO2 emissions\n",
+    "# the final demand GHG emissions\n",
     "\n",
-    "F_hh_ = None"
+    "e_hh_ = None"
    ]
   },
   {
@@ -538,8 +538,8 @@
    "outputs": [],
    "source": [
     "# Calculate the total global footprint\n",
-    "F_total = None\n",
-    "F_total"
+    "e_total = None\n",
+    "e_total"
    ]
   },
   {
@@ -575,8 +575,8 @@
    "outputs": [],
    "source": [
     "# In this case we diagonalize the emission intensity vector \n",
-    "F_breakdown = None\n",
-    "F_breakdown"
+    "e_breakdown = None\n",
+    "e_breakdown"
    ]
   },
   {
@@ -590,10 +590,10 @@
    "outputs": [],
    "source": [
     "# we apply the sectoral labels\n",
-    "F_breakdown = None\n",
+    "e_breakdown = None\n",
     "\n",
     "# we print the results\n",
-    "F_breakdown"
+    "e_breakdown"
    ]
   },
   {
@@ -618,12 +618,12 @@
    "outputs": [],
    "source": [
     "# we sum the results by regions\n",
-    "F_regional_breakdown = None\n",
+    "e_regional_breakdown = None\n",
     "\n",
     "# We sort the results from largest to smallest\n",
-    "F_rb_sorted = None\n",
+    "e_rb_sorted = None\n",
     "\n",
-    "F_rb_sorted"
+    "e_rb_sorted"
    ]
   },
   {
@@ -687,7 +687,7 @@
    "outputs": [],
    "source": [
     "# Normalize your results\n",
-    "F_rb_sorted_norm = None\n",
+    "e_rb_sorted_norm = None\n",
     "\n",
     "# Plot top 15 regions\n"
    ]
