--- a/national_enviro_footprint/nat_enviro_footprint.ipynb
+++ b/national_enviro_footprint/nat_enviro_footprint.ipynb
@@ -2769,8 +2769,8 @@
    },
    "outputs": [],
    "source": [
-    "X_out = Z.sum(axis=1) + Y.sum(axis=1)\n",
-    "X_in = Z.sum(axis=0) + V"
+    "x_out = Z.sum(axis=1) + Y.sum(axis=1)\n",
+    "x_in = Z.sum(axis=0) + V"
    ]
   },
   {
@@ -2792,7 +2792,7 @@
    ],
    "source": [
     "# Check if X_out and X_in are the same \n",
-    "print(f\"The inputs equal the outputs: {np.allclose(X_in, X_out)}\")"
+    "print(f\"The inputs equal the outputs: {np.allclose(x_in, x_out)}\")"
    ]
   },
   {
@@ -2822,8 +2822,8 @@
    "outputs": [],
    "source": [
     "# Calculate the technical coefficient matrix A\n",
-    "inv_diag_X = np.linalg.inv(np.diag(X_out))\n",
-    "A = Z @ inv_diag_X\n",
+    "inv_diag_x = np.linalg.inv(np.diag(x_out))\n",
+    "A = Z @ inv_diag_x\n",
     "\n",
     "# Make an identity matrix of the same order of A\n",
     "I = np.identity(A.shape[0])\n",
@@ -2862,10 +2862,10 @@
    ],
    "source": [
     "# Calculate the total product output\n",
-    "X = L @ Y.sum(axis=1)\n",
+    "x = L @ Y.sum(axis=1)\n",
     "\n",
     "# Check if X is the same as X_out\n",
-    "print(f\"The calculated X is right : {np.allclose(X, X_out)}\")"
+    "print(f\"The calculated X is right : {np.allclose(x, x_out)}\")"
    ]
   },
   {
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -3678,7 +3678,7 @@
        "       Services                         3.227542e+05  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3705,7 +3705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 16,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4481,7 +4481,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4519,7 +4519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -4532,7 +4532,7 @@
        "7"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4568,7 +4568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5344,7 +5344,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 19,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5382,7 +5382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5711,7 +5711,7 @@
        "       Services                          1.267166e+04  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5740,7 +5740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5778,7 +5778,7 @@
        "Name: (BRICS, Gross capital formation), dtype: float64"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5803,7 +5803,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -5999,7 +5999,7 @@
        "       Services               1.527349e+03                      1.527349e+03"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6053,7 +6053,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -6829,7 +6829,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 23,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6864,7 +6864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7640,7 +7640,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7686,7 +7686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7695,13 +7695,13 @@
    "outputs": [],
    "source": [
     "# First we separate the Extensions into their respective vectors\n",
-    "F_CO2 = F[0]\n",
-    "F_water = F[1]\n",
-    "F_employment =F[2]\n",
+    "e_CO2 = F[0]\n",
+    "e_water = F[1]\n",
+    "e_employment =F[2]\n",
     "\n",
     "# We also collect the final demand extension for CO2 emissions\n",
-    "F_y_CO2 = F_y[0]\n",
-    "F_y_water = F_y[1]\n",
+    "e_y_CO2 = F_y[0]\n",
+    "e_y_water = F_y[1]\n",
     "# we don't collect employment in final demand because there is no employment to final demand"
    ]
   },
@@ -7720,7 +7720,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7729,10 +7729,11 @@
    "outputs": [],
    "source": [
     "# We then calculate the intensities of the extensions\n",
-    "f_CO2 = F_CO2 @ inv_diag_X"
+    "f_CO2 = e_CO2 @ inv_diag_x"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -7742,12 +7743,12 @@
    "source": [
     "#### 4.3 Calculate the carbon footprint.\n",
     "\n",
-    "$\\text{F} = \\text{f} \\mathbf{L}\\text{Y} + \\text{F}_{y}$"
+    "$\\text{e} = \\text{f} \\mathbf{L}\\text{Y} + \\text{e}_{y}$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 26,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7757,18 +7758,18 @@
     {
      "data": {
       "text/plain": [
-       "34758162135.00001"
+       "34758162135.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total global footprint\n",
-    "F_CO2_total = f_CO2 @ L @ Y.sum(axis=1) + F_y_CO2.sum()\n",
-    "F_CO2_total"
+    "e_CO2_total = f_CO2 @ L @ Y.sum(axis=1) + e_y_CO2.sum()\n",
+    "e_CO2_total"
    ]
   },
   {
@@ -7784,7 +7785,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 27,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7894,17 +7895,17 @@
        "       Gross capital formation                      2.589339e+09"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the footprint broken down by region and final demand category\n",
-    "F_CO2_Y_breakdown = f_CO2 @ L @ Y\n",
+    "e_CO2_Y_breakdown = f_CO2 @ L @ Y\n",
     "# we apply the columns labels\n",
-    "F_CO2_Y_breakdown = pd.DataFrame(F_CO2_Y_breakdown, index=pd.MultiIndex.from_frame(mr_fd_labels))\n",
-    "F_CO2_Y_breakdown"
+    "e_CO2_Y_breakdown = pd.DataFrame(e_CO2_Y_breakdown, index=pd.MultiIndex.from_frame(mr_fd_labels))\n",
+    "e_CO2_Y_breakdown"
    ]
   },
   {
@@ -7920,7 +7921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 28,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -7969,19 +7970,19 @@
        "CO2 emissions (unit: tonnes/year)  1.313563e+10  1.335968e+10  8.262854e+09"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Calculate the total regional footprint\n",
-    "F_CO2_oecd = F_CO2_Y_breakdown.iloc[:4].sum() + F_y_CO2[0] # Remember that this vector only has 3 items referring to household of each region\n",
-    "F_CO2_brics = F_CO2_Y_breakdown.iloc[4:8].sum() + F_y_CO2[1]\n",
-    "F_CO2_row = F_CO2_Y_breakdown.iloc[8:].sum() + F_y_CO2[2]\n",
+    "e_CO2_oecd = e_CO2_Y_breakdown.iloc[:4].sum() + e_y_CO2[0] # Remember that this vector only has 3 items referring to household of each region\n",
+    "e_CO2_brics = e_CO2_Y_breakdown.iloc[4:8].sum() + e_y_CO2[1]\n",
+    "e_CO2_row = e_CO2_Y_breakdown.iloc[8:].sum() + e_y_CO2[2]\n",
     "\n",
     "# organize them into a dataframe\n",
-    "CO2_reg_footprint = pd.concat([F_CO2_oecd, F_CO2_brics, F_CO2_row], axis=1)\n",
+    "CO2_reg_footprint = pd.concat([e_CO2_oecd, e_CO2_brics, e_CO2_row], axis=1)\n",
     "CO2_reg_footprint.columns = [\"OECD\", \"BRICS\", \"ROW\"]\n",
     "CO2_reg_footprint.index = [f_lb[0]]\n",
     "CO2_reg_footprint"
@@ -8013,7 +8014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8789,7 +8790,7 @@
        "       Services                                  0.0  "
       ]
      },
-     "execution_count": 33,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -8824,7 +8825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 30,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -8994,16 +8995,16 @@
        "       Services                                    9.568654e+06"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# In this case we diagonalize the emission intensity vector \n",
-    "F_brics_s = np.diag(f_CO2) @ L @ Y_brics.sum(axis=1)\n",
-    "F_brics_s =  pd.DataFrame(F_brics_s, index=pd.MultiIndex.from_frame(mr_sec_labels), columns=[f_lb[0]])\n",
-    "F_brics_s"
+    "e_brics_s = np.diag(f_CO2) @ L @ Y_brics.sum(axis=1)\n",
+    "e_brics_s =  pd.DataFrame(e_brics_s, index=pd.MultiIndex.from_frame(mr_sec_labels), columns=[f_lb[0]])\n",
+    "e_brics_s"
    ]
   },
   {
