fixed stated year

--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -23,6 +23,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -32,7 +33,7 @@
    "source": [
     "## Exercise 1: Load the data\n",
     "\n",
-    "Import the IO exiobase data for the year 2011 in product-by-product format"
+    "Import the IO exiobase data for the year 2019 in product-by-product format"
    ]
   },
   {
