--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -37,6 +38,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Exercise 1: Load the data\n",
+    "\n",
+    "Import the IO exiobase data for the year 2011 in product-by-product format"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -66,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -74,8 +84,8 @@
    },
    "outputs": [],
    "source": [
-    "A = None # A matrix\n",
-    "Y = None  # Y matrix\n",
+    "A = None # Z matrix\n",
+    "Y = None  # y matrix\n",
     "F = None  # impacts matrix\n",
     "F_hh = None # impacts for FD matrix"
    ]
@@ -512,9 +522,9 @@
    },
    "outputs": [],
    "source": [
-    "# the final demand GHG emissions\n",
+    "# the final demand CO2 emissions\n",
     "\n",
-    "e_hh_ = None"
+    "F_hh_ = None"
    ]
   },
   {
@@ -539,8 +549,8 @@
    "outputs": [],
    "source": [
     "# Calculate the total global footprint\n",
-    "e_total = None\n",
-    "e_total"
+    "F_total = None\n",
+    "F_total"
    ]
   },
   {
@@ -576,8 +586,8 @@
    "outputs": [],
    "source": [
     "# In this case we diagonalize the emission intensity vector \n",
-    "e_breakdown = None\n",
-    "e_breakdown"
+    "F_breakdown = None\n",
+    "F_breakdown"
    ]
   },
   {
@@ -591,10 +601,10 @@
    "outputs": [],
    "source": [
     "# we apply the sectoral labels\n",
-    "e_breakdown = None\n",
+    "F_breakdown = None\n",
     "\n",
     "# we print the results\n",
-    "e_breakdown"
+    "F_breakdown"
    ]
   },
   {
@@ -619,12 +629,12 @@
    "outputs": [],
    "source": [
     "# we sum the results by regions\n",
-    "e_regional_breakdown = None\n",
+    "F_regional_breakdown = None\n",
     "\n",
     "# We sort the results from largest to smallest\n",
-    "e_rb_sorted = None\n",
+    "F_rb_sorted = None\n",
     "\n",
-    "e_rb_sorted"
+    "F_rb_sorted"
    ]
   },
   {
@@ -688,7 +698,7 @@
    "outputs": [],
    "source": [
     "# Normalize your results\n",
-    "e_rb_sorted_norm = None\n",
+    "F_rb_sorted_norm = None\n",
     "\n",
     "# Plot top 15 regions\n"
    ]
