week 5 student version

--- a/intro_exiobase/intro_exiobase_sv.ipynb
+++ b/intro_exiobase/intro_exiobase_sv.ipynb
@@ -1,7 +1,6 @@
 {
  "cells": [
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -38,15 +37,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Exercise 1: Load the data\n",
-    "\n",
-    "Import the IO exiobase data for the year 2011 in product-by-product format"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
@@ -76,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -84,8 +74,8 @@
    },
    "outputs": [],
    "source": [
-    "A = None # Z matrix\n",
-    "Y = None  # y matrix\n",
+    "A = None # A matrix\n",
+    "Y = None  # Y matrix\n",
     "F = None  # impacts matrix\n",
     "F_hh = None # impacts for FD matrix"
    ]
@@ -522,9 +512,9 @@
    },
    "outputs": [],
    "source": [
-    "# the final demand CO2 emissions\n",
+    "# the final demand GHG emissions\n",
     "\n",
-    "F_hh_ = None"
+    "e_hh_ = None"
    ]
   },
   {
@@ -549,8 +539,8 @@
    "outputs": [],
    "source": [
     "# Calculate the total global footprint\n",
-    "F_total = None\n",
-    "F_total"
+    "e_total = None\n",
+    "e_total"
    ]
   },
   {
@@ -586,8 +576,8 @@
    "outputs": [],
    "source": [
     "# In this case we diagonalize the emission intensity vector \n",
-    "F_breakdown = None\n",
-    "F_breakdown"
+    "e_breakdown = None\n",
+    "e_breakdown"
    ]
   },
   {
@@ -601,10 +591,10 @@
    "outputs": [],
    "source": [
     "# we apply the sectoral labels\n",
-    "F_breakdown = None\n",
+    "e_breakdown = None\n",
     "\n",
     "# we print the results\n",
-    "F_breakdown"
+    "e_breakdown"
    ]
   },
   {
@@ -629,12 +619,12 @@
    "outputs": [],
    "source": [
     "# we sum the results by regions\n",
-    "F_regional_breakdown = None\n",
+    "e_regional_breakdown = None\n",
     "\n",
     "# We sort the results from largest to smallest\n",
-    "F_rb_sorted = None\n",
+    "e_rb_sorted = None\n",
     "\n",
-    "F_rb_sorted"
+    "e_rb_sorted"
    ]
   },
   {
@@ -698,7 +688,7 @@
    "outputs": [],
    "source": [
     "# Normalize your results\n",
-    "F_rb_sorted_norm = None\n",
+    "e_rb_sorted_norm = None\n",
     "\n",
     "# Plot top 15 regions\n"
    ]
