Fixed copy statement in intro to exiobase class

--- a/intro_exiobase/intro_exiobase.ipynb
+++ b/intro_exiobase/intro_exiobase.ipynb
@@ -1321,7 +1321,7 @@
    ],
    "source": [
     "# we make a copy of our product output vector\n",
-    "x_ = x \n",
+    "x_ = x.copy() \n",
     "\n",
     "# we divide 1 by the values that are non-0\n",
     "x_[x_!=0] = 1/x_[x_!=0]\n",
