Week 6 practical: corrections and additions

--- a/MRIO_seminal_works/MRIO_seminal_works_sv.ipynb
+++ b/MRIO_seminal_works/MRIO_seminal_works_sv.ipynb
@@ -1,27 +1,21 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "# Practical 6: MRIO seminal works\n",
     "\n",
     "#### Objectives\n",
     "- Learn how to replicate the methods and results from a few studies. \n",
-    "- Understand and explain main results from EEIOA studies using MRIO seminal works\n"
+    "- Understand and explain main results from EEIOA studies using MRIO seminal works"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Exercise 1\n",
     "Hertwich and Peters (2009) developed an analysis of the carbon footprint of multiple countries in 2001. Their results show the carbon footprint of different final demand categories per product.\n",
@@ -31,11 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "source": [
     "<img src=\"figures/global_CO2_footprint.png\" width=\"70%\" />\n",
     "\n",
@@ -44,11 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "##### Steps in this exercise:\n",
     "- Import data\n",
@@ -57,23 +43,9 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
-   "source": [
-    "### Import modules and data"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    },
     "tags": []
    },
    "outputs": [],
@@ -86,11 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Import exiobase"
@@ -98,11 +66,14 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
+   "source": [
+    "### Import modules and data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Calculate the Leontief inverse"
    ]
@@ -110,11 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# An identy matrix of the size as A-matrix\n",
@@ -125,11 +92,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Calculate total output vector (x)\n",
@@ -141,11 +104,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Calculate environmental intensity matrix\n",
     "From satellite matrix (F), select row for CO2 (i.e., F_co2). This can be done using pd.loc"
@@ -154,11 +113,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "indicator = None\n",
@@ -169,11 +124,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# make a copy of the product output vector\n",
@@ -186,17 +137,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Calculate the intensity"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -206,11 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "f_ = F_/x.transpose() # co2 intensity vector\n",
@@ -219,11 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Contribution of Final Demand to the CO2 footprint\n",
     "From the final demand matrix (Y), calculate the global final demand of households (y_hh), government expenditures (y_gov) and gross capital formation (y_cap)."
@@ -232,11 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Calculation y_hh, y_gov, and y_cap\n",
@@ -248,18 +184,36 @@
     "\n",
     "# global final expenditure by household \n",
     "\n",
-    "# global final expenditure by household \n",
+    "# global final expenditure by government\n",
     "\n",
     "# global capital formation "
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
+   "source": [
+    "In the previous lectures you have used the method df.loc[pd.IndexSlice[level_0, level_1], :] to slice dataframes with multi-index labels\n",
+    "\n",
+    "If you find it more practical you can also use the df.xs(label, axis, level, drop_level) method instead\n",
+    "\n",
+    "- the first argument is the label you want to select\n",
+    "- the second argument axis is the axis (rows=0 or columns=1)\n",
+    "- the third agument is the level (e.g., level=0 is the region)\n",
+    "- the forth argument drop_level allows you to specify whether you want to keep the level of the multiindex you sliced or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "### Calculation CO2 footprint per final demand category per product"
    ]
@@ -267,11 +221,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# CO2 footprint by household expenditures\n",
@@ -284,11 +234,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# Check the shape of the resulting vectors"
@@ -296,11 +242,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "At this point, it should be 3 vectors (for each final demand category from point 2) of 1 row with 9800 columns (i.e., 49 regions x 200 products)\n",
     "\n",
@@ -310,11 +252,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Reshape vectors\n",
@@ -337,11 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Build new pandas dataframe by concatenating the 3 vectors together"
@@ -349,11 +283,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Separate results by sectors\n",
     "\n",
@@ -366,11 +296,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "### Index product categories\n",
@@ -387,11 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Sum per product group"
@@ -400,11 +322,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Re-group dataframe and add labels\n",
@@ -416,11 +334,7 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
+   "metadata": {},
    "source": [
     "### Visualize the results\n",
     "Create a bar graph showing the final contribution per product category to the CO2 footprint\n",
@@ -432,23 +346,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "slideshow": {
-     "slide_type": "subslide"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "## Create a vertical bar chart"
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
+   "metadata": {},
+   "source": [
+    "### Replicate these steps for 2011 data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## References\n",
     "Hertwich, E. G., & Peters, G. P. (2009). Carbon footprint of nations: A global, trade-linked analysis. Environmental Science and Technology, 43(16), 6414–6420. https://doi.org/10.1021/es803496a\n",
@@ -458,9 +372,8 @@
   }
  ],
  "metadata": {
-  "celltoolbar": "Slideshow",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -474,7 +387,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.2"
   },
   "vscode": {
    "interpreter": {
