--- a/midterm/mock_exam/mock_exam.ipynb
+++ b/midterm/mock_exam/mock_exam.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,6 +111,36 @@
     "# CO2 Extensions \n",
     "F_sat_CO2 = F_sat[F_sat.index.str.contains(\"CO2\")].sum(axis=0)\n",
     "F_sat_hh_CO2 = F_sat_hh[F_sat_hh.index.str.contains(\"CO2\")].sum(axis=0)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "by running the following\n",
+    "\n",
+    "F_sat_hh.index.str.contains(\"CO2\")\n",
+    "\n",
+    "You are obtaining a boolean array (i.e., an array of true and false values), where true is assigned to the position of all labels that contain \"CO2\" in them.\n",
+    "\n",
+    "This is the equivalent of creating a list of all the labels concerning CO2 emissions in the extension such as\n",
+    "\n",
+    "```\n",
+    "['CO2 - combustion - air',\n",
+    "'CO2 - non combustion - Cement production - air',\n",
+    "'CO2 - non combustion - Lime production - air',\n",
+    "'CO2 - agriculture - peat decay - air',\n",
+    "'CO2 - waste - biogenic - air', 'CO2 - waste - fossil - air']\n",
+    "```\n",
+    "\n",
+    "##### Explanation\n",
+    "\n",
+    "**F_sat_gg.index** returns all labels of your index\n",
+    "\n",
+    "**.str** allows to treat each entry of the index as a string\n",
+    "\n",
+    "**.contains()** is a method for strings that allows you check whether a string may contain another string  "
    ]
   },
   {
