--- a/physical_n_hybrid_IO/hybrid_IO.ipynb
+++ b/physical_n_hybrid_IO/hybrid_IO.ipynb
@@ -422,7 +422,7 @@
    "source": [
     "We want to create a Sankey diagram of the global material inputs and outputs. Figure 1 shows a diagram of the inputs and outputs of an economy. \n",
     "\n",
-    "<image src=\"figures\\figure1.jpg\" width=\"60%\"></image>\n",
+    "<image src=\"figures/figure1.jpg\" width=\"60%\"></image>\n",
     "\n",
     "\n",
     "Figure 1. System definition of the input-output material flows of a country. Solid blocks indicate economic activities of: \n",
