--- a/modelling_circularity_interventions/circularity_interventions.ipynb
+++ b/modelling_circularity_interventions/circularity_interventions.ipynb
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {
     "slideshow": {
      "slide_type": "slide"
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {
     "slideshow": {
      "slide_type": "subslide"
@@ -179,7 +179,7 @@
        " 'VA_act']"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -228,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 9,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 10,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -287,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 11,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -381,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -487,7 +487,7 @@
        "[164 rows x 2 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -517,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -576,19 +576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "Y_ct = Y.copy()\n",
-    "\n",
-    "# 1 vector of zeros of the same length of the rows\n",
-    "i_i = np.zeros(Y_ct.shape[0])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -602,7 +590,7 @@
     "# Market penetration\n",
     "kp_pc = 0.3 \n",
     "# implement primary change\n",
-    "Y_ct.loc[pd.IndexSlice[:,\"Motor vehicles, trailers and semi-trailers (34)\"],:] *= kt_pc * kp_pc\n",
+    "Y_ct.loc[pd.IndexSlice[:,\"Motor vehicles, trailers and semi-trailers (34)\"],:] *= 1 - kt_pc * kp_pc\n",
     "\n",
     "\n",
     "# Secondary change\n",
@@ -611,13 +599,12 @@
     "# Market penetration\n",
     "kp_pc = 1 \n",
     "# implement secondary change\n",
-    "Y_ct.loc[pd.IndexSlice[:,:,:,\"C_TDMO\"],:] *= kt_pc * kp_pc\n",
-    "\n"
+    "Y_ct.loc[pd.IndexSlice[:,:,:,\"C_TDMO\"],:] *= kt_pc * kp_pc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 22,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -681,10 +668,10 @@
     {
      "data": {
       "text/plain": [
-       "(14577617331.961227, 13989057751.61644)"
+       "(14577617331.961227, 14470110132.076183)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -715,7 +702,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 23,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -725,10 +712,10 @@
     {
      "data": {
       "text/plain": [
-       "(16712487923.123253, 16163003262.56723)"
+       "(16712487923.123253, 16544571746.0034)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -759,7 +746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 24,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -772,7 +759,7 @@
        "4736719890.900244"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -795,7 +782,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 25,
    "metadata": {
     "slideshow": {
      "slide_type": "fragment"
@@ -807,7 +794,7 @@
      "output_type": "stream",
      "text": [
       "Global Circularity Gap: 13.5 %\n",
-      "Global Circularity Gap counterfactual: 13.7 %\n"
+      "Global Circularity Gap counterfactual: 13.9 %\n"
      ]
     }
    ],
@@ -830,27 +817,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'Change in resource use: -0.9 %'"
+       "'Change in resource use: -0.1 %'"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Baseline\n",
-    "RE_base = RE.iloc[:-3].sum().sum() + RE_FD.iloc[:-3].sum().sum()\n",
+    "RE_base = RE.iloc[:-3].sum().sum() + RE_FD.iloc[:-4].sum().sum()\n",
     "\n",
     "# Counterfactual\n",
     "# intensity vector of RE\n",
-    "f_RE = RE.iloc[:-3].sum() @ inv_diag_x\n",
+    "f_RE = RE.iloc[:-4].sum() @ inv_diag_x\n",
     "# counterfactual WU\n",
     "RE_ct_tot = f_RE @ x_ct + RE_FD.iloc[:-3].sum().sum()\n",
     "\n",
@@ -883,7 +870,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.10.2"
   }
  },
  "nbformat": 4,
