--- a/structural_decomposition_analysis/structural_decomposition.ipynb
+++ b/structural_decomposition_analysis/structural_decomposition.ipynb
@@ -119,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "# Baseline\n",
+    "# t=0 Baseline year\n",
     "\n",
     "x_0 = Z_0.sum(axis=1) + y_0.values\n",
     "A_0 = Z_0 /x_0.transpose()\n",
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Counterfactual\n",
+    "# t=1 next year\n",
     "\n",
     "x_1 = Z_1.sum(axis=1) + y_1\n",
     "A_1 = Z_1 /x_1.transpose()\n",
