--- a/structural_decomposition_analysis/structural_decomposition_sv.ipynb
+++ b/structural_decomposition_analysis/structural_decomposition_sv.ipynb
@@ -119,7 +119,7 @@
    },
    "outputs": [],
    "source": [
-    "# Baseline\n",
+    "# t=0 Baseline year\n",
     "\n",
     "x_0 = None\n",
     "A_0 = None\n",
@@ -132,7 +132,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Counterfactual\n",
+    "# t=1 next year\n",
     "\n",
     "x_1 = None\n",
     "A_1 = None\n",
